# slurmkit

./: 404.html  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
.tasks/: config.yaml  todo-collection-creation-check-conflict.md  todo-cross-cluster-sync.md  todo-improved-cli-visuals.md  todo-job-dependencies.md  todo-last-task-collection-analysis.md  todo-post-run-analysis-and-notification.md
.tasks/done/2026-03-14-ensure-nested-job-dir-support-in-status-etc/: activity.md  task.md
.tasks/done/2026-03-15-slurmkit-collections-displays-collections-cmds/: activity.md  task.md
.tasks/done/2026-03-15-slurmkit-skill-install-cmd/: activity.md  plan.md  task.md
.tasks/done/2026-03-15-slurmkit-spec-template/: activity.md  plan.md  task.md
.tasks/done/2026-03-16-collection-estimated-completion-time/: activity.md  plan.md  task.md
.tasks/done/2026-03-23-enhance-slurmkit-collections-list-table-view/: activity.md  plan.md  task.md
.tasks/done/2026-03-23-sort-collections-by-date-created/: activity.md  plan.md  task.md
.tasks/done/2026-03-30-refactor-slurmkit-status-cmd/: activity.md  plan.md  task.md
.tasks/done/2026-04-01-job-subdir-template-context/: activity.md  plan.md  task.md
.tasks/done/2026-04-05-fix-resubmit-filter-state-handling/: activity.md  plan.md  task.md
.tasks/todo-collection-group-filter-and-groups-command/: task_specs.md
.tasks/todo-collection-show-effective-latest/: task_specs.md
.tasks/todo-docs-and-tests-finalization/: task_specs.md
.tasks/todo-resubmit-callback-extra-params/: task_specs.md
.tasks/todo-resubmit-callback-selection/: task_specs.md
.tasks/todo-resubmit-submission-groups/: task_specs.md
api/: index.html
api/collections/: index.html
api/config/: index.html
api/generate/: index.html
api/slurm/: index.html
api/sync/: index.html
cli-reference/: index.html
collections/: index.html
configuration/: index.html
docs/: cli-reference.md  collections.md  configuration.md  getting-started.md  index.md  job-generation.md  notifications.md  sync.md
docs/api/: collections.md  config.md  generate.md  index.md  slurm.md  sync.md
examples/: README.md
examples/demo_project/: .gitignore  README.md  collection_ai_callback.py  notification_formatter_callback.py  quickstart.sh  setup_dummy_jobs.py
examples/demo_project/utilities/: paths.py  (+2 more)
getting-started/: index.html
job-generation/: index.html
notifications/: index.html
search/: search_index.json
skills/slurmkit/: SKILL.md
src/slurmkit/: __init__.py  collections.py  config.py  generate.py  notification_formatters.py  notifications.py  slurm.py  spec_interpolation.py  sync.py  wandb_utils.py
sync/: index.html
tests/: __init__.py  cli_output.py  test_cli_app.py  test_cli_collection_analyze.py  test_cli_collection_cancel.py  test_cli_collection_groups.py  test_cli_collection_list.py  test_cli_collection_show.py  test_cli_generate_defaults.py  test_cli_init.py  test_cli_notify.py  test_cli_notify_collection_final.py  test_cli_prompts.py  test_cli_rendering.py  test_cli_resubmit.py  test_cli_resubmit_job_id.py  test_cli_ui.py  test_collections.py  test_collections_v2.py  test_config.py  test_demo_project.py  test_generate.py  test_migration.py  test_notifications.py  test_notifications_phase2.py  test_notifications_workflow.py  test_slurm.py  test_workflows_collections.py  test_workflows_jobs.py
todo/: cluster-specific-config.md  interactive-mode.md  notifications.md
(+97 files in other folders)
